# pcb_defect_detection

./: .gitignore  README.md  pyproject.toml  template_match.py
utils/: __init__.py  image_helper.py
