[project]
name = "pcb_defect_detection"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Robin.Wang", email = "3Jg$94sbQ@q1"},
]
dependencies = [
    "matplotlib>=3.9.1",
    "opencv-python>=4.10.0.84",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
